--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    id=#jahaci
     <ul>
       <li><a href="1korak.html">1.korak</a></li>
       <li><a href="2korak.html">2.korak</a></li>
