--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <body>
-    <ul>
-      id=#jahaci
+    <ul id="jahaci">
       <li><a href="1korak.html">1.korak</a></li>
       <li><a href="2korak.html">2.korak</a></li>
       <li><a href="3korak.html">3.korak</a></li>
